--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,2 +1,13 @@
 @import './common';
-@import './example';
+@import './header';
+@import './mobile-menu';
+@import './hero';
+@import './products';
+@import './about';
+@import './advantages';
+@import './gallery';
+@import './reviews';
+@import './contacts';
+@import './footer';
+@import './modal';
+
