--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,4 +1,9 @@
+@import './vars';
+@import './reset';
+@import './mixins';
 @import './common';
+@import './vh';
+@import './buttons';
 @import './header';
 @import './mobile-menu';
 @import './hero';
