--- a/src/sass/_common.scss
+++ b/src/sass/_common.scss
@@ -33,6 +33,20 @@ body {
   padding-bottom: 60px;
 }
 
+.backdrop {
+  position: fixed;
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  background-color: rgba(0, 0, 0, 0.2);
+  padding: 90px 15px;
+  overflow-y: scroll;
+//   transition: opacity var(--duration) var(--timing-function),
+//     visibility var(--duration) var(--timing-function), scale var(--duration) var(--timing-function);
+}
+
 .list {
   list-style: none;
 }
