--- a/src/sass/_vars.scss
+++ b/src/sass/_vars.scss
@@ -12,6 +12,7 @@ $hover-green-color: #0A8817;
 $products-green-color: #AEC6A5;
 $products-yellow-color: #EFD478;
 $products-brown-color: #D6936D;
+$disabled-color: #ABABAB;
 $duratoin: cubic-bezier(0.4, 0, 0.2, 1);
 $timing-function: 250ms;
 
