--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -16,18 +16,22 @@
       Sweets lovers can expect 55 types of ice cream, 15 types of coffee and 23
       milkshakes.
     </p>
+    <p class="about-text">
+      This is enough to choose ice cream and coffee for any mood!
+    </p>
+    
     <button type="button" class="about-button" data-modal-open>
       Read more
       <span>
         <svg class="more" width="12" height="12">
-          <use></use>
+          <use href="#"></use>
         </svg>
       </span>
     </button>
   </div>
 
   <!-- ------------------ЭТО БУДЕТ МОДАЛКА------------- -->
-  <div class="backdrop is-hidden" data-modal>
+  <!-- <div class="backdrop is-hidden" data-modal>
     <div class="about-modal">
         <button type="button" data-modal-close class="about-modal-close">x
 					<svg width="16" height="16">
@@ -40,5 +44,5 @@
             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo veniam quis saepe dolores, ad, quisquam quae sunt incidunt rem accusantium deserunt neque sed natus. Nostrum, quos ad? Rerum, molestiae iusto.
         </p>
     </div>
-  </div>
+  </div> -->
 </section>
