--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -1,5 +1,6 @@
 <section class="about section">
   <div class="container">
+    <div>
     <p class="about-pre-title">tradition and love</p>
     <h2 class="about-title">how it<span>&#39</span>s made?</h2>
     <div>
@@ -19,6 +20,7 @@
     <p class="about-text">
       This is enough to choose ice cream and coffee for any mood!
     </p>
+    </div>
     
     <button type="button" class="about-button" data-modal-open>
       Read more
