--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -24,7 +24,7 @@
       Read more
       <span>
         <svg class="more" width="12" height="12">
-          <use href="#"></use>
+          <use href="./images/symbol-defs.svg#icon-more"></use>
         </svg>
       </span>
     </button>
