--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 @import '~node_modules/modern-normalize/modern-normalize.css';
 p,
 h1,
@@ -88,4 +89,359 @@ body {
   -webkit-clip-path: inset(50%);
           clip-path: inset(50%);
   margin: -1px;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+ul {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+ul {
+  padding: 0;
+  list-style: none;
+}
+
+Потрібно відкривати .list {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+
+body {
+  font-family: "Montserrat", "Seymour One", sans-serif;
+}
+
+.link {
+  text-decoration: none;
+}
+
+button {
+  cursor: pointer;
+}
+
+.container {
+  margin: 0 auto;
+  width: 1200px;
+  padding: 0px 15px;
+}
+
+.test-buttons {
+  height: auto;
+  display: flex;
+}
+
+ul {
+  -webkit-padding-start: 0;
+          padding-inline-start: 0;
+}
+
+.overlay {
+  /* Скрываем подложку  */
+  opacity: 0;
+  visibility: hidden;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 20;
+  transition: 0.3s all;
+}
+
+.modal {
+  /* Hide all modals  */
+  opacity: 0;
+  visibility: hidden;
+  z-index: 21;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 100%;
+  max-width: 280px;
+  height: auto;
+  background: #FCFCFC;
+  border: 2px solid #F8D24E;
+  border-radius: 10px;
+  transform: scale(1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+@media screen and (min-width: 768px) {
+  .modal {
+    height: auto;
+    max-width: 568px;
+  }
+}
+
+.modal.active,
+.overlay.active {
+  opacity: 1;
+  visibility: visible;
+}
+
+.modal__title {
+  font-family: "Seymour One", sans-serif;
+  font-size: 16px;
+  line-height: 1.5;
+  color: #131313;
+  margin-bottom: 20px;
+}
+@media screen and (min-width: 768px) {
+  .modal__title {
+    margin-bottom: 40px;
+    font-size: 20px;
+    line-height: 1.4;
+    color: #131313;
+  }
+}
+
+.modal__button-close {
+  position: absolute;
+  padding: 0;
+  top: 12px;
+  right: 12px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #FCFCFC;
+  border: 0px;
+  cursor: pointer;
+  fill: currentColor;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal__button-close:hover, .modal__button-close:focus {
+  color: #F8D24E;
+}
+
+.modal__container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 28px;
+}
+@media screen and (min-width: 768px) {
+  .modal__container {
+    padding: 32px 54px;
+  }
+}
+
+.modal__items {
+  margin-bottom: 24.25px;
+}
+.modal__items .modal__item:not(:last-child) {
+  margin-bottom: 20px;
+}
+@media screen and (min-width: 768px) {
+  .modal__items {
+    display: flex;
+    gap: 32px;
+    flex-direction: row;
+    margin-bottom: 40px;
+  }
+}
+
+.modal__item {
+  display: flex;
+  justify-content: center;
+  position: relative;
+  height: 200px;
+  width: 132px;
+}
+
+.modal__img {
+  position: absolute;
+  z-index: 24;
+  top: 0px;
+  border-radius: 50%;
+  width: 132px;
+  height: 132px;
+}
+
+.modal__circl {
+  z-index: 23;
+  position: absolute;
+  width: 132px;
+  height: 132px;
+  top: 7px;
+  border-radius: 50%;
+}
+.modal__circl.modal__iceCream {
+  background: linear-gradient(0deg, rgba(156, 190, 143, 0.7), rgba(156, 190, 143, 0.7)), #d9d9d9;
+  box-shadow: 0px 5.26027px 19.726px rgba(10, 136, 23, 0.25);
+}
+.modal__circl.modal__iceCoffee {
+  background: linear-gradient(0deg, rgba(248, 210, 78, 0.7), rgba(248, 210, 78, 0.7)), #d9d9d9;
+  box-shadow: 0px 5.26027px 19.726px rgba(153, 114, 23, 0.25);
+}
+.modal__circl.modal__milkShake {
+  background: linear-gradient(0deg, rgba(213, 117, 63, 0.7), rgba(213, 117, 63, 0.7)), #d9d9d9;
+  box-shadow: 0px 5.26027px 19.726px rgba(0, 0, 0, 0.25);
+}
+
+.modal__shape {
+  position: absolute;
+  bottom: 0px;
+  z-index: 22;
+  width: 132px;
+  height: 136.4px;
+  border-radius: 15.7808px;
+}
+.modal__shape.modal__iceCream {
+  border: 2px solid #96af8c;
+  filter: drop-shadow(0px 5.26027px 19.726px rgba(212, 20, 67, 0.1));
+}
+.modal__shape.modal__iceCoffee {
+  background: #EFD478;
+  border: 2px solid #EFD478;
+  box-shadow: 0px 5.26027px 19.726px rgba(212, 20, 67, 0.1);
+}
+.modal__shape.modal__milkShake {
+  border: 2px solid #D6936D;
+  filter: drop-shadow(0px 5.26027px 19.726px rgba(212, 20, 67, 0.1));
+  border-radius: 15.7808px;
+}
+
+.modal__text {
+  z-index: 25;
+  position: absolute;
+  bottom: 20px;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.25;
+  text-align: center;
+  letter-spacing: 0.04em;
+  text-transform: uppercase;
+  color: #131313;
+}
+
+.modal__form {
+  display: flex;
+  flex-direction: column;
+  gap: 12.12px;
+}
+@media screen and (min-width: 768px) {
+  .modal__form {
+    gap: 0px;
+    width: 368px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .modal__form .modal__input-label:not(:last-child) {
+    margin-bottom: 16px;
+  }
+}
+
+.modal__input-div {
+  position: relative;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+@media screen and (max-width: 768px) {
+  .modal__input-div {
+    width: 220px;
+  }
+}
+
+.modal__form-input {
+  resize: none;
+  width: 100%;
+  padding: 8px 12px;
+  font-family: "Montserrat", sans-serif;
+  font-size: 12px;
+  line-height: 1.4;
+  color: #131313;
+  background: rgba(248, 210, 78, 0.1);
+  border: 1px solid #84A178;
+  border-radius: 10px;
+}
+.modal__form-input:focus-visible {
+  outline: none;
+}
+.modal__input-div .modal__form-input {
+  height: 32px;
+}
+
+.modal__input-textarea::-moz-placeholder {
+  font-family: "Montserrat", sans-serif;
+  font-size: 12px;
+  line-height: 1.4;
+  /* or 17px */
+  color: #131313;
+}
+
+.modal__input-textarea:-ms-input-placeholder {
+  font-family: "Montserrat", sans-serif;
+  font-size: 12px;
+  line-height: 1.4;
+  /* or 17px */
+  color: #131313;
+}
+
+.modal__input-textarea::placeholder {
+  font-family: "Montserrat", sans-serif;
+  font-size: 12px;
+  line-height: 1.4;
+  /* or 17px */
+  color: #131313;
+}
+.modal__input-textarea .modal_form-input {
+  resize: none;
+  padding: 8px 12px;
+  font-family: "Montserrat", sans-serif;
+  font-size: 12px;
+  line-height: 1.4;
+  color: #131313;
+}
+
+.modal__button-container {
+  margin: 16px auto;
+}
+
+.modal__button {
+  padding: 12px 34px;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 600;
+  font-size: 12px;
+  line-height: 1.25;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  color: #131313;
+  background-color: #F8D24E;
+  border: 0px solid #F8D24E;
+  border-radius: 10px;
+  color: #131313;
+}
+.modal__button:hover {
+  background: #0A8817;
+  border: 0px solid #0A8817;
+}
+.modal__button:focus {
+  color: #FCFCFC;
+  background: #0A8817;
+  border: 0px solid #0A8817;
+}
+.modal__button:disabled {
+  background: #ABABAB;
+  border: 0px solid #ABABAB;
+}
+.modal__button .modal__button-icon {
+  position: relative;
+  top: 0.125em;
+  flex-shrink: 0;
+  height: 1em;
+  width: 1em;
+  transition: stroke 0.25s;
+}
+.modal__button #modal__botton-icon-path {
+  stroke: currentColor;
+  transition: stroke 0.25s;
 }
