Change image name

--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -1,45 +1,45 @@
 <section class="section__products">
   <div class="container">
-    <label for="suptitle" class="section__label">Коментар</label>
+    <label for="suptitle" class="section__label">100% natural</label>
     <h2 class="section__title">products</h2>
     <div class="section__cards">
       <div class="section__card">
         <picture>
           <source
-            srcset="../images/products/desktop/product1.webp1x
-                            ../images/products/desktop/product1-2.webp 2x"
+            srcset="./images/products/desktop/iceCream1x.webp 1x
+                            ./images/products/desktop/iceCream2x.webp 2x"
             media="(min-width:1200px)"
             type="image/webp"
           />
           <source
-            srcset="../images/products/desktop/product1.jpg 1x
-                            ../images/products/desktop/product1-2.jpg 2x"
+            srcset="./images/products/desktop/iceCream1x.png 1x
+          ./images/products/desktop/iceCream2x.png 2x"
             media="(min-width:1200px)"
           />
           <source
-            srcset="../images/products/tablet/product-tab1.webp 1x
-                            ../images/products/tablet/product-tab1-2.webp 2x"
+            srcset="./images/products/tablet/iceCream1x.webp 1x
+                            ./images/products/tablet/iceCream2x.webp 2x"
             media="(min-width:768px)"
             type="image/webp"
           />
           <source
-            srcset="../images/products/tablet/product-tab1.jpg 1x
-                            ../images/products/tablet/product-tab1-2.jpg 2x"
+            srcset="./images/products/tablet/iceCream1x.png 1x
+                            ./images/products/tablet/iceCream2x.png 2x"
             media="(min-width:768px)"
           />
           <source
-            srcset="../images/products/mobile/product-mob1.webp 1x
-                            ../images/products/mobile/product-mob1-2.webp 2x"
+            srcset="./images/products/mobile/iceCream1x.webp 1x
+                            ./images/products/mobile/iceCream2x.webp 2x"
             media="(max-width:767px)"
             type="image/webp"
           />
           <source
-            srcset="../images/products/mobile/product-mob1.jpg 1x
-                            ../images/products/mobile/product-mob3-2.jpg 2x"
+            srcset="./images/products/mobile/iceCream1x.png 1x
+                            ./images/products/mobile/iceCream2x.png 2x"
             media="(max-width:767px)"
           />
           <img
-            src="../images/products/mobile/product-mob1.jpg"
+            src="./images/products/mobile/iceCream1x.png"
             alt=""
             width=""
             height=""
@@ -67,40 +67,40 @@
       <div class="section__card">
         <picture>
           <source
-            srcset="../images/products/desktop/product2.webp1x
-                            ../images/products/desktop/product2-2.webp2x"
+            srcset="./images/products/desktop/iceCoffee1x.webp 1x
+                            ./images/products/desktop/iceCoffee2x.webp 2x"
             media="(min-width:1200px)"
             type="image/webp"
           />
           <source
-            srcset="../images/products/desktop/product2.jpg 1x
-                            ../images/products/desktop/product2-2.jpg 2x"
+            srcset="./images/products/desktop/iceCoffee1x.png 1x
+          ./images/products/desktop/iceCoffee2x.png 2x"
             media="(min-width:1200px)"
           />
           <source
-            srcset="../images/products/tablet/product-tab2.webp 1x
-                            ../images/products/tablet/product-tab2-2.webp 2x"
+            srcset="./images/products/tablet/iceCoffee1x.webp 1x
+                            ./images/products/tablet/iceCoffee2x.webp 2x"
             media="(min-width:768px)"
             type="image/webp"
           />
           <source
-            srcset="../images/products/tablet/product-tab2.jpg 1x
-                            ../images/products/tablet/product-tab2-2.jpg 2x"
+            srcset="./images/products/tablet/iceCoffee1x.png 1x
+                            ./images/products/tablet/iceCoffee2x.png 2x"
             media="(min-width:768px)"
           />
           <source
-            srcset="../images/products/mobile/product-mob2.webp1x
-                            ../images/products/mobile/product-mob2-2.webp2x"
+            srcset="./images/products/mobile/iceCoffee1x.webp 1x
+                            ./images/products/mobile/iceCoffee2x.webp 2x"
             media="(max-width:767px)"
             type="image/webp"
           />
           <source
-            srcset="../images/products/mobile/product-mob2.jpg 1x
-                            ../images/products/mobile/product-mob2-2.jpg 2x"
+            srcset="./images/products/mobile/iceCoffee1x.png 1x
+                            ./images/products/mobile/iceCoffee2x.png 2x"
             media="(max-width:767px)"
           />
           <img
-            src="../images/products/mobile/product-mob2.jpg"
+            src="./images/products/mobile/iceCoffee1x.png"
             alt=""
             width=""
             height=""
@@ -128,40 +128,40 @@
       <div class="section__card">
         <picture>
           <source
-            srcset="../images/products/desktop/product3.webp 1x
-                            ../images/products/desktop/product3-2.webp 2x"
+            srcset="./images/products/desktop/milkSnake1x.webp 1x
+                            ./images/products/desktop/milkSnake2x.webp 2x"
             media="(min-width:1200px)"
             type="image/webp"
           />
           <source
-            srcset="../images/products/desktop/product3.jpg 1x
-                            ../images/products/desktop/product3-2.jpg 2x"
+            srcset="./images/products/desktop/milkSnake1x.png 1x
+          ./images/products/desktop/milkSnake2x.png 2x"
             media="(min-width:1200px)"
           />
           <source
-            srcset="../images/products/tablet/product-tab3.webp 1x
-                            ../images/products/tablet/product-tab3-2.webp 2x"
+            srcset="./images/products/tablet/milkSnake1x.webp 1x
+                            ./images/products/tablet/milkSnake2x.webp 2x"
             media="(min-width:768px)"
             type="image/webp"
           />
           <source
-            srcset="../images/products/tablet/product-tab3.jpg 1x
-                            ../images/products/tablet/product-tab3-2.jpg 2x"
+            srcset="./images/products/tablet/milkSnake1x.png 1x
+                            ./images/products/tablet/milkSnake2x.png 2x"
             media="(min-width:768px)"
           />
           <source
-            srcset="../images/products/mobile/product-mob3.webp 1x
-                            ../images/products/mobile/product-mob3-2.webp 2x"
+            srcset="./images/products/mobile/milkSnakes1x.webp 1x
+                            ./images/products/mobile/milkSnake2x.webp 2x"
             media="(max-width:767px)"
             type="image/webp"
           />
           <source
-            srcset="../images/products/mobile/product-mob3.jpg 1x
-                            ../images/products/mobile/product-mob3-2.jpg 2x"
+            srcset="./images/products/mobile/milkSnakes1x.png 1x
+                            ./images/products/mobile/milkSnakes2x.png 2x"
             media="(max-width:767px)"
           />
           <img
-            src="../images/products/mobile/product-mob3.jpg"
+            src="./images/products/mobile/milkSnakes1x.png"
             alt=""
             width=""
             height=""
