--- a/src/sass/_products.scss
+++ b/src/sass/_products.scss
@@ -1,43 +1,14 @@
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
-ul {
-	margin-top: 0;
-	margin-bottom: 0;
-}
-
-ul {
-	padding: 0;
-	list-style: none;
-}
-
-Потрібно відкривати .list {
-	list-style-type: none;
-	padding: 0;
-	margin: 0;
-}
-
-body {
-
-	font-family: 'Montserrat', 'Seymour One', sans-serif;
-
-}
-
-.link {
-	text-decoration: none;
-}
-
-
-button {
-	cursor: pointer;
-}
-
-.container {
-	margin: 0 auto;
-	width: 1200px;
-	padding: 0px 15px;
+@mixin mobile {
+	.section__products {
+		display: inline-flex;
+		width: 240px;
+		height: 240px;
+		border: 2px dashed #2a2a2a;
+		border-radius: 8px;
+		background-image: url("./images/products/mobile/ice-cream-mob\ 1.svg");
+		background-image: url("./images/products/mobile/ice-cream-mob\ 2.svg");
+		background-image: url("./images/products/mobile/ice-cream-mob\ 3.svg");
+		background-repeat: no-repeat;
+		background-size: contain;
+	}
 }
