--- a/src/sass/_products.scss
+++ b/src/sass/_products.scss
@@ -5,9 +5,9 @@
 		height: 240px;
 		border: 2px dashed #2a2a2a;
 		border-radius: 8px;
-		background-image: url("./images/products/mobile/ice-cream-mob\ 1.svg");
-		background-image: url("./images/products/mobile/ice-cream-mob\ 2.svg");
-		background-image: url("./images/products/mobile/ice-cream-mob\ 3.svg");
+		background-image: url("./images/products/mobile/ice-cream-mob1.svg");
+		background-image: url("./images/products/mobile/ice-cream-mob2.svg");
+		background-image: url("./images/products/mobile/ice-cream-mob3.svg");
 		background-repeat: no-repeat;
 		background-size: contain;
 	}
