add style mobile

--- a/src/sass/_products.scss
+++ b/src/sass/_products.scss
@@ -1,8 +1,32 @@
 @mixin mobile {
 	.section__products {
+		background-color: #fff;
 		display: inline-flex;
-		width: 240px;
-		height: 240px;
+		width: 100%;
+		height: 100%;
+	}
+
+	.section__label {
+		@include font(800, 18px, 1.2, null) {
+			color: #131313;
+			text-align: center;
+			text-transform: uppercase;
+		}
+	}
+
+
+	.section__title {
+
+		@include font(400, 30px, 1.26, 0.04em) {
+			color: #131313;
+			text-align: center;
+			text-transform: uppercase;
+		}
+	}
+
+
+
+	.section__card {
 		border: 2px dashed #2a2a2a;
 		border-radius: 8px;
 		background-image: url("./images/products/mobile/ice-cream-mob1.svg");
