--- a/src/partials/modal.html
+++ b/src/partials/modal.html
@@ -10,10 +10,7 @@
 <div class="modal" data-modal="1">
   <button class="modal__button-close js-modal-close" data-modal-close>
     <svg width="16" height="17" viewBox="0 0 16 17">
-      <!-- <use href="./images/modal-close-icon.svg"></use> -->
-      <path
-        d="m8.62687 8.16563 3.68443-3.72259c.0728-.0859.1109-.1964.1066-.30941-.0044-.11302-.0507-.22022-.1299-.30019-.0791-.07998-.1852-.12683-.2971-.13119-.1119-.00437-.2212.03408-.3063.10764L8.0002 7.53248 4.31576 3.8054c-.08369-.08456-.1972-.13206-.31555-.13206-.11836 0-.23187.0475-.31556.13206-.08369.08456-.13071.19924-.13071.31882 0 .11958.04702.23427.13071.31882l3.68889 3.72259-3.68889 3.72257a.44905.44905 0 0 0-.11099.1455.4527.4527 0 0 0-.04403.1783.45308.45308 0 0 0 .03029.1811.45014.45014 0 0 0 .09955.1537.44383.44383 0 0 0 .15215.1006.44021.44021 0 0 0 .35568-.0139.4444.4444 0 0 0 .14402-.1121L8.0002 8.79878l3.6844 3.72262c.0851.0735.1944.112.3063.1076a.44212.44212 0 0 0 .2971-.1312c.0792-.0799.1255-.1872.1299-.3002.0043-.113-.0338-.2235-.1066-.3094L8.62687 8.16563Z"
-      />
+      <use href="./images/modal/symbol-defs.svg#icon-modal-close-icon"></use>
     </svg>
   </button>
 
@@ -105,5 +102,33 @@
         <button class="modal__button" type="submit">submit</button>
       </div>
     </form>
+  </div>
+</div>
+
+<!-- -------------------- HOW IT`S MADE -------------------- -->
+
+<div class="modal" data-modal="2">
+  <button class="modal__button-close js-modal-close" data-modal-close>
+    <svg width="16" height="17" viewBox="0 0 16 17">
+      <use href="./images/modal/symbol-defs.svg#icon-modal-close-icon"></use>
+    </svg>
+  </button>
+
+  <div class="modal__container" role="group">
+    <p class="modal__title">Read more</p>
+
+    <button class="modal__about-us-video-zone">
+      <svg aria-hidden="true" viewBox="0 0 36 36">
+        <use
+          href="./images/modal/symbol-defs.svg#icon-modal-how-it-works-play"
+        ></use>
+      </svg>
+    </button>
+
+    <p class="modal__about-us-text">
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+      tempor incididunt ut labore et Lorem ipsum dolor sit amet, consectetur
+      adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+    </p>
   </div>
 </div>
