--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,16 +1,16 @@
 <section class="header">
   <div class="container">
-    <logo class="logo">
-      <svg class="icon-ice" width="41" height="37">
+    <logo class="header-logo">
+      <svg class="header-icon-ice" width="41" height="37">
         <use href="./images/header/logo.svg#icon-logo"></use>
       </svg>
     </logo>
-    <nav class="navigation">
-      <ul class="list">
-        <li class="item">Home <a class="link"></a></li>
-        <li class="item">How it’s made? <a class="link"></a></li>
-        <li class="item">Our products <a class="link"></a></li>
-        <li class="item">Contact <a class="link"></a></li>
+    <nav class="header-nav">
+      <ul class="header-list">
+        <li class="header-item">Home <a class="header-link"></a></li>
+        <li class="header-item">How it’s made? <a class="header-link"></a></li>
+        <li class="header-item">Our products <a class="header-link"></a></li>
+        <li class="header-item">Contact <a class="header-link"></a></li>
       </ul>
     </nav>
   </div>
